added bottom navigation item strings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">EarthquakeApp</string>
+    <string name="Earthquakes">Earthquakes</string>
+    <string name="Emergency">Emergency</string>
+    <string name="Settings">Settings</string>
 </resources>
